--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -50,9 +50,11 @@
     </div>
 
   </div>
-  <div id="loader" class="fill-abs flex-center d-hide">
-    <div class="ico-spinner spinner"></div>
-    <div id="loaderMsg" class="mx-2 d-hide"></div>
+  <div id="loader" class="fill-abs d-hide">
+    <div class="fill-abs flex-center blurry-bg">
+      <img class="d-inline-block bison-logo-square small-icon spinner">
+      <div id="loaderMsg" class="mx-2 d-hide"></div>
+    </div>
   </div>
 
   <div id="noteBox" class="d-hide">
