--- a/client/webserver/site/src/html/init.tmpl
+++ b/client/webserver/site/src/html/init.tmpl
@@ -4,61 +4,58 @@
   <div class="position-absolute" id="forms">
 
     {{- /* App Initialization */ -}}
-    <form id="appPWForm">
-      <h3>[[[Set App Password]]]</h3>
-      <div class="fs18 mb-3">[[[reg_set_app_pw_msg]]]</div>
-      <hr class="dashed my-3">
-      <div class="mb-3">
+    <form id="appPWForm" class="flex-stretch-column">
+      <header>
+        <span class="ico-locked fs20 grey me-2"></span>
+        <span>[[[Set App Password]]]</span>
+      </header>
+      <div class="fs18">[[[reg_set_app_pw_msg]]]</div>
+      <div class="mt-3 border-top">
         <label for="appPW">[[[Password]]]</label>
         <input type="password" id="appPW" autocomplete="new-password">
       </div>
-      <div class="mb-3">
+      <div>
         <label for="appPWAgain">[[[Password Again]]]</label>
         <input type="password" id="appPWAgain" autocomplete="off">
       </div>
-      <div class="mb-3">
-        <input class="form-check-input" type="checkbox" id="rememberPass">
-        <label for="rememberPass" class="form-check-label ps-1">[[[Remember my password]]]</label>
-      </div>
-      <div class="mb-3">
-        <div class="py-2 d-flex justify-content-between align-items-center">
+      <div class="d-flex">
+        <div class="flex-grow-1 d-flex align-items-center">
           <label for="seedInput" id="toggleSeedInput">
-          <span id="toggleSeedInputIcon" class="fs11 ico-plus me-1"></span>
-          [[[Restoration Seed]]]
+            <span id="toggleSeedInputIcon" class="fs11 ico-plus me-1"></span>
+            [[[Restoration Seed]]]
           </label>
         </div>
-        <textarea class="mono d-hide" id="seedInput" rows="4" autocomplete="off" spellcheck="false"></textarea>
+        <button id="appPWSubmit" type="submit" class="flex-grow-1 feature ms-2">[[[Submit]]]</button>
       </div>
-      <div class="d-flex justify-content-end">
-        <button id="appPWSubmit" type="submit" class="go px-4">[[[Submit]]]</button>
+      <div id="seedInputBox" class="d-hide">
+        <textarea class="w-100 mono" id="seedInput" rows="4" autocomplete="off" spellcheck="false"></textarea>
       </div>
-      <div class="fs15 pt-3 text-center d-hide text-danger text-break" id="appPWErrMsg"></div>
+      <div class="fs15 text-center d-hide text-danger text-break" id="appPWErrMsg"></div>
     </form>
 
     {{- /* Quick Config Form */ -}}
-    <form id="quickConfigForm" class="d-hide">
-      <h3>[[[Quick Placements]]]</h3>
-      <div id="qcChoices">
+    <form id="quickConfigForm" class="flex-stretch-column d-hide">
+      <header>
+        <span class="fs22 ico-settings grey me-2"></span>
+        <span>Quick Configuration</span>
+      </header>
+      <div id="qcChoices" class="flex-stretch-column">
         <div class="fs18 mb-2">[[[quickconfig_wallet_header]]]</div>
-        <div id="qcWalletsBox" class="mb-3">
+        <div id="qcWalletsBox" class="mt-2">
           <label id="qcWalletTmpl" class="p-1 d-flex justify-content-start align-items-center hoverbg pointer">
             <input class="form-check-input" type="checkbox" data-tmpl="checkbox" checked>
             <img class="quickconfig-asset-logo mx-2" data-tmpl="icon">
             <span data-tmpl="name" class="fs20"></span>
           </label>
         </div>
-        <hr class="dashed my-3">
-        <div class="fs18 mb-3">[[[quickconfig_server_header]]]</div>
+        <div class="fs18 mt-3 pt-3 border-top">[[[quickconfig_server_header]]]</div>
         <div id="qcServersBox">
-          <label id="qcServerTmpl" class="d-flex justify-content-start align-items-center p-1 hoverbg pointer">
+          <label id="qcServerTmpl" class="d-flex justify-content-start align-items-center p-1 hoverbg pointer my-1">
             <input class="form-check-input" type="checkbox" data-tmpl="checkbox" checked>
             <span data-tmpl="host" class="ms-2 fs18 lh1"></span>
           </label>
         </div>
-        <hr class="dashed my-3">
-        <div class="flex-center">
-          <button id="quickConfigSubmit" type="submit" class="go px-4">[[[Submit]]]</button>
-        </div>
+        <button id="quickConfigSubmit" type="submit" class="feature my-2">[[[Submit]]]</button>
       </div>
 
       <div id="qcErrors" class="d-hide">
@@ -84,16 +81,15 @@
 
     {{- /* Seed Backup */ -}}
     <form id="seedBackupForm" class="d-hide">
-      <h3>[[[Backup App Seed]]]</h3>
+      <header>[[[Backup App Seed]]]</header>
       <div id="sbWanna">
         <div class="fs18 mb-3">
           [[[seed_backup_implore]]]
         </div>
-        <div class="flex-center mb-3">
-          <button id="showSeed" class="go px-4">[[[Backup Now]]]</button>
+        <div class="flex-stretch-column pt-2">
+          <button id="showSeed" class="feature">[[[Backup Now]]]</button>
         </div>
-        <hr class="dashed my-3">
-        <div class="d-flex justify-content-end">
+        <div class="d-flex justify-content-end pt-3">
           <a class="d-block plainlink fs15 flex-center hoverbg pointer" href="/wallets">
             <span>[[[Skip this step for now]]]</span>
             <span class="ico-info mx-1" data-tooltip="You can backup your seed at any time in the Settings view"></span>
@@ -103,11 +99,11 @@
 
       <div id="sbSeed" class="d-hide">
         <div class="fs18 mb-3">[[[save_seed_instructions]]]</div>
-        <div class="my-3 px-3 flex-center">
+        <div class="mt-2 border-top flex-center">
           <div class="fs18 mono mx-auto user-select-all text-break" id="mnemonic"></div>
         </div>
         <div class="d-flex justify-content-end">
-          <button id="seedAck" class="go px-4">[[[Done]]]</button>
+          <button id="seedAck" class="feature">[[[Done]]]</button>
         </div>
       </div>
     </form>
