--- a/client/webserver/site/src/html/register.tmpl
+++ b/client/webserver/site/src/html/register.tmpl
@@ -15,7 +15,7 @@
 
     {{- /* Form to set up a wallet. Shown on demand when a user clicks a setupWallet button. */ -}}
     <form class="d-hide" id="newWalletForm">
-      {{template "newWalletForm" }}
+      {{template "newWalletForm"}}
     </form>
 
     {{- /* DEX ADDRESS FORM */ -}}
@@ -29,7 +29,7 @@
     </form>
 
     {{- /* REG ASSET SELECTOR */ -}}
-    <form class="d-hide mw-425" id="regAssetForm">
+    <form class="d-hide" id="regAssetForm">
       {{template "regAssetForm"}}
     </form>
 
